<resources>
    <string name="app_name">ChessClock</string>
    <string name="welcome_to_sammy_s_n_chess_clock_app">Welcome to Sammy\'s\n Chess Clock App!</string>
    <string name="_1_minute">1 Minute</string>
    <string name="_5_minutes">5 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="custom_time">Custom Time</string>
    <string name="touch_nto_start">Touch \nto Start</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="set_a_time">Set a Time:</string>
    <string name="minutes_A">Minutes A</string>
    <string name="enter_minutes_here">ENTER MINUTES HERE</string>
    <string name="seconds_A">Seconds A</string>
    <string name="enter_seconds_here">ENTER SECONDS HERE</string>
    <string name="start_game">Start Game</string>
    <string name="enter_minutes">Enter Minutes</string>
    <string name="enter_seconds">Enter Seconds</string>
    <string name="pause">pause</string>
    <string name="settings">settings</string>
    <string name="pauseGame"/>
    <string name="play">play</string>
    <string name="minutes_B">Minutes B</string>
    <string name="Seconsd_B">Seconds B</string>
    <string name="delete">delete</string>
    <string name="custom_times">Custom Times</string>
    <string name="new_time">New Time</string>
    <string name="set_time">SET TIME:</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_time_b">Enter Time B</string>
    <string name="enter_time_a">Enter Time A</string>
    <string name="add_new_time_setting">Add New Time Setting</string>
    <string name="timer_a_minutes">Timer A Minutes</string>
    <string name="timer_a_seconds">Timer A Seconds</string>
    <string name="enter_timer_b_minutes">Enter Timer B Minutes</string>
    <string name="enter_timer_b_seconds">Enter Timer B Seconds</string>

</resources>