<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical">
    <TextView
            android:text="@string/set_time"
            android:gravity="center"
            android:textSize="50sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
        <TextView
                android:text="@string/minutes_A"
                android:textSize="15sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"/>
        <EditText
                android:id="@+id/inputMinutesA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_minutes"
                android:maxLength="3"
                android:textSize="15sp"
                android:inputType="number"
                android:gravity="center"
                android:layout_marginEnd="70dp"
                android:ems="10"
                tools:ignore="LabelFor"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
        <TextView
                android:text="@string/seconds_A"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="1"/>
        <EditText
                android:id="@+id/inputSecondsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_seconds"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginEnd="70dp"
                android:maxLength="2"
                android:ems="10"
                android:layout_weight="1"
                tools:ignore="LabelFor"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
        <TextView
                android:text="@string/minutes_B"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_minutes"
                android:maxLength="3"
                android:textSize="15sp"
                android:layout_marginEnd="70dp"
                android:inputType="number"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/inputMinutesB"
                android:layout_weight="1"

                tools:ignore="LabelFor"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp"
    >
        <TextView
                android:text="@string/Seconsd_B"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_seconds"
                android:textSize="15sp"
                android:gravity="center"
                android:maxLength="2"
                android:layout_marginEnd="70dp"
                android:ems="10"
                android:id="@+id/inputSecondsB"
                android:layout_weight="1"
                tools:ignore="LabelFor"/>
    </LinearLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
    >

        <Button
                android:text="@string/start_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:id="@+id/startGameButton"
                android:backgroundTint="#4CAF50"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_add2"
                android:id="@+id/fabSave"
                android:focusable="true"
                app:backgroundTint="#530D98"/>
    </RelativeLayout>
</LinearLayout>
